# pCite

./: .env.example  .gitignore  LICENSE  NCITE_BUILD.md  PCITE_BUILD.md  README.md  boundary_investigation.py  build_citation_cache.py  embedding_baseline.py  fig_coverage_threshold.py  frontend.md  frontend_handoff.md  pride_corpus.py  pride_graded_eval.py  pyproject.toml  run_poc.py  run_pride_poc.py  run_steps345.py  run_vps.sh  sensitivity_analysis.py  validate_components.py
.github/workflows/: ci.yml
data/: boundary_results.json  citation_cache.json  graph.graphml  results.json  scores.jsonl
data/embedding/: embedding_table.json
data/negative-control/: papers.jsonl  results.json  scores.jsonl
data/sensitivity/: sensitivity_table.json
data/validation/: claim_extraction_results.json  edge_typing_results.json  validation_report.md
docs/: corpus.html  index.html
docs/claim/: 000248a76734ee6d.html  0004c01e7c493b86.html  0004db67dc96063f.html  0007c04a54724eeb.html  001134c2df1e43d5.html  0012c26634fa17d6.html  0015ed5426a23b22.html  001978f3f2d2a87d.html  0021f0be235dedb7.html  002237da590f7644.html  00234d398b4130ed.html  00268f974bb50858.html  0027ff036df37c44.html  003256c5599d2959.html  0032ffaec1591546.html  0038c2b561979987.html  003bed173bbefcf9.html  003e399b71369a6e.html  003fcc5709a8af86.html  004987b2c8fc49d0.html  005040124b5537fd.html  0051eefbefdef939.html  00531441fbc36664.html  00548769d0251769.html  0056b2bee5262fc0.html  005ad7e63daa84c0.html  005eebc0e4b239d3.html  005ff0a51f2c8cec.html  (+16723 more)
tests/: test_all.py  test_pride.py
(+18 files in other folders)
