[project]
name = "ncite"
version = "0.1.0"
description = "Validation-weighted citation framework for reproducible biomedical knowledge graphs"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"

dependencies = [
    "anthropic>=0.40",
    "google-genai>=1.0",
    "python-dotenv>=1.0",
    "httpx>=0.27",
    "pydantic>=2.0",
    "rdflib>=7.0",
    "networkx>=3.3",
    "scipy>=1.13",
    "matplotlib>=3.9",
    "jupyter>=1.1",
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ncite", "src/pcite"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
src = ["src"]
